@@ -1,3 +1,6 @@
+14-10-2009 J-Donald Tournier <d.tournier@brain.org.au>
+    * lib/mrtrix.cpp: fix parse_float() to handle NaN in string specification
+
 13-10-2009 J-Donald Tournier <d.tournier@brain.org.au>
     * cmd/streamtrack.cpp: 
       clarified the meaning of command-line options "number" & "maxnum"
